changed the database from mongodb compass to Atlas

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=8747
 JWT_KEY="kishan sheth super secret key"
 ORIGIN="http://localhost:5173"
-DATABSE_URL="mongodb://localhost:27017/syncrous"
+# DATABASE_URL="mongodb://localhost:27017/syncrous"
+DATABASE_URL="mongodb+srv://karthikeyan40581:karthikeyan18504@cluster0.chgduj7.mongodb.net/syncrous"
