--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=8747
 JWT_KEY="kishan sheth super secret key"
 # ORIGIN="http://localhost:5173"
-ORIGIN = "https://real-time-chat-app-frontend-51t4.onrender.com";
+# ORIGIN = "https://real-time-chat-app-frontend-51t4.onrender.com";
 # DATABASE_URL="mongodb://localhost:27017/syncrous"
 DATABASE_URL="mongodb+srv://karthikeyan40581:karthikeyan18504@cluster0.chgduj7.mongodb.net/syncrous"
